# SOPhistication

./: .gitignore  .replit  README.md  main.py  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/sba-backend/: app.py  db.py  file_security.py  requirements.txt
artifacts/sba-backend/extraction/: confidence.py  errors.py  formatting.py  models.py  ner_engine.py  pipeline.py  regex_fallbacks.py  schemas.py
artifacts/sba-backend/extraction/prompts/: __init__.py  registry.py
artifacts/sba-backend/scripts/: backfill_loantype_from_deal.py  backfill_prompt_versions.py
artifacts/sba-backend/sharepoint/: __init__.py  auth.py  factory.py  mock_reader.py  mock_writer.py  reader.py  writer.py
artifacts/sba-web/: index.html  package.json  requirements.yaml
artifacts/sba-web/.replit-artifact/: artifact.toml
artifacts/sba-web/src/: App.tsx  index.css
attached_assets/: Pasted--Replit-Agent-Prompt-Delete-Extractions-from-History-Go_1777096466829.txt  Pasted--Replit-Agent-Prompt-Fix-LoanType-Field-Use-Deal-Analys_1777097629318.txt  Pasted--Replit-Agent-Prompt-Per-Field-Source-Citations-Process_1777094747092.txt  Pasted--Replit-Agent-Prompt-Prompt-Versioning-and-Schema-Valid_1777091555085.txt  Pasted--Replit-Agent-Prompt-Tiered-Confidence-Scoring-Cumulati_1774896449203.txt  Pasted--Replit-Agent-Prompt-Tighten-CORS-and-Eliminate-Silent-_1777091157391.txt  Pasted--Replit-Prompt-SBA-Loan-Data-Extraction-Tool-with-Share_1774884691499.txt  sba_extract_standalone_shareable_1774884737431.py
lib/api-spec/: openapi.yaml
(+29 files in other folders)
