[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gunicorn>=25.3.0",
    "msal>=1.35.1",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.11",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "spacy==3.8.11",
]
